Add functionality to message form

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<p>Interested in learning more about or connecting with me? Want to know what I've been reading? Drop a message!</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/xknljrdq">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -93,7 +93,7 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Send Message" name="formsend"/></li>
 								</ul>
 							</div>
 							<div class="col-4 col-12-small">
